Added more examples

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
       <a class="dropdown-toggle">Examples</a>
       <ul class="dropdown-menu">
         <li><a onclick="loadDefaultExample()">Default example</a></li>
+        <li><a onclick="loadPeriodicExample()">Periodic</a></li>
         <li><a onclick="loadCounterExample()">Counter</a></li>
         <li><a onclick="loadTwoClassExample()">Two communication classes</a></li>
+        <li><a onclick="loadTwoClassWithSmallJumpExample()">Two classes with a small jumping probability</a></li>
       </ul>
     </li>
   </ul>
