--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="lib/bootstrap.min.js"></script>
   <script src="js/model.js"></script>
+  <script src="js/vector.js"></script>
   <script src="js/app.js"></script>
   <script src="js/mc.js"></script>
   <script src="js/examples.js"></script>
