--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <div id="title">
     <h2>Markov Chain simulator</h2>
   </div>
-  <div id="main">
-    <div id="left">
+  <div>
+    <div class="col-md-6">
       <h4>Transition probabilities</h4>
 
       <div id="matrix"></div>
@@ -41,7 +41,7 @@
 
       <div id="stats"></div>
     </div>
-    <div id="right">
+    <div class="col-md-6">
       <h4>Graphical representation</h4>
 
       <div id="graph"></div>
