--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <script src="js/app.js"></script>
   <script src="js/mc.js"></script>
   <script src="js/examples.js"></script>
+  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
   <link rel="stylesheet" type="text/css" href="lib/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="css/mc.css">
 </head>
@@ -29,7 +31,16 @@
 </div>
 <div id="contents">
   <div id="title">
-    <h2>Markov Chain simulator</h2>
+    <div class="col-md-12">
+      <h2>Markov Chain simulator</h2>
+    </div>
+  </div>
+  <div>
+    <div class="col-md-12">
+      <div class="bs-callout bs-callout-description">The matrix below gives the transition probabilities. The entry in
+      row $i$, column $j$ is the probability that the chain will be in state $j$ at time $t+1$, given that it is in
+      state $j$ at time $i$. The graphical representation </div>
+    </div>
   </div>
   <div>
     <div class="col-md-6">
@@ -63,6 +74,9 @@
   })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
   ga('create', 'UA-46105838-1', 'yoriz.co.uk');
   ga('send', 'pageview');
+</script>
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
 </script>
 </body>
 </html>
