--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
   </div>
   <div>
     <div class="col-md-12">
-      <div class="bs-callout bs-callout-description">The matrix below gives the transition probabilities. The entry in
-      row $i$, column $j$ is the probability that the chain will be in state $j$ at time $t+1$, given that it is in
-      state $j$ at time $i$. The graphical representation </div>
+      <div class="bs-callout bs-callout-description">
+        The matrix below gives the transition probabilities. The entry in
+        row $i$, column $j$ is the probability that the chain will be in state $j$ at time $t+1$, given that it is in
+        state $j$ at time $t$. The graphical representation shows the current state, and the possible state transitions.
+        Click on "Run" to start the Markov chain. 
+      </div>
     </div>
   </div>
   <div>
