--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <body>
 <div class="collapse navbar-collapse navbar-inverse">
   <ul class="nav navbar-nav">
+    <li>
+      <a href="http://markov.yoriz.co.uk"><b>Markov Chain simulator</b></a>
+    </li>
     <li class="dropdown">
       <a class="dropdown-toggle">Examples</a>
       <ul class="dropdown-menu">
@@ -30,18 +33,13 @@
   </ul>
 </div>
 <div id="contents">
-  <div id="title">
-    <div class="col-md-12">
-      <h2>Markov Chain simulator</h2>
-    </div>
-  </div>
   <div>
     <div class="col-md-12">
       <div class="bs-callout bs-callout-description">
         The matrix below gives the transition probabilities. The entry in
         row $i$, column $j$ is the probability that the chain will be in state $j$ at time $t+1$, given that it is in
         state $j$ at time $t$. The graphical representation shows the current state, and the possible state transitions.
-        Click on "Run" to start the Markov chain. 
+        Click on "Run" to start the Markov chain.
       </div>
     </div>
   </div>
