Added some more explanation

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p>A <i>Markov chain</i> is a probabilistic model describing a system that changes from state to state,
           and in which the probability of the system being in a certain state at a certain time step depends only on the
           state of the preceding time step. The probability that the $j$ is the next state of the chain, given that the
-          current state is state $j$, is
+          current state is state $i$, is
           called the <i>transition probability from $i$ to $j$</i>.
           The matrix below gives the transition probabilities. The entry in row $i$, column $j$ is the transition
           probability from $i$ to $j$. Note that the rows necessarily add up to 1.
