Added some more explanation

--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
         <p>A <i>Markov chain</i> is a probabilistic model describing a system that changes from state to state,
           and in which the probability of the system being in a certain state at a certain time step depends only on the
           state of the preceding time step. The probability that the $j$ is the next state of the chain, given that the
-          current state is state $i$, is
-          called the <i>transition probability from $i$ to $j$</i>.
+          current state is state $i$, is called the <i>transition probability from $i$ to $j$</i>.
           The matrix below gives the transition probabilities. The entry in row $i$, column $j$ is the transition
-          probability from $i$ to $j$. Note that the rows necessarily add up to 1.
+          probability from $i$ to $j$. Note that entries in each rows necessarily add up to 1.
           The graphical representation below shows the states, and the possible state transitions.
           Click &ldquo;Run&rdquo; to start the Markov chain. Click &ldquo;Examples&rdquo; in the top menu to choose
           a different example, or change the probabilities yourself to experiment!</p>
