Added more keywords

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Markov Chain simulator</title>
   <meta name="description" content="Online Markov chain simulator">
   <meta name="keywords"
-        content="Markov chain,discrete event,discrete time,simulation,stochastic,processes,time series,education">
+        content="online,on-line,on line,Markov chain,discrete event,discrete time,simulator,generator,system,simulation,stochastic,processes,time series,education,states,frequency,histogram">
   <meta name="author" content="Yori Zwols">
   <meta charset="UTF-8">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
